proxy conf template

--- a/.gitignore
+++ b/.gitignore
@@ -41,8 +41,9 @@ npm-debug.log
 yarn-error.log
 testem.log
 /typings
+proxy.*.conf.json
+!proxy.conf.json
 
 # System Files
 .DS_Store
 Thumbs.db
-proxy.*.conf.json
