--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "start": "ng serve --port 4202 --host 0.0.0.0  --disable-host-check",
-    "start:proxy": "ng serve --port 4202 --disable-host-check --proxy-config proxy.conf.json",
+    "start:example": "ng serve --port 4202 --disable-host-check --proxy-config proxy.example.conf.json",
     "build": "ng build --configuration production",
     "build-stats": "ng build --configuration production --stats-json",
     "analyze": "webpack-bundle-analyzer dist/workhorse-ui/stats.json",
