--- a/package.json
+++ b/package.json
@@ -23,16 +23,16 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~13.2.2",
-    "@angular/cdk": "^13.2.2",
+    "@angular/cdk": "~13.2.2",
     "@angular/common": "~13.2.2",
     "@angular/compiler": "~13.2.2",
     "@angular/core": "~13.2.2",
     "@angular/forms": "~13.2.2",
-    "@angular/localize": "^13.2.2",
+    "@angular/localize": "~13.2.2",
     "@angular/platform-browser": "~13.2.2",
     "@angular/platform-browser-dynamic": "~13.2.2",
     "@angular/router": "~13.2.2",
-    "@coodoo/coo-table": "13.3.5",
+    "@coodoo/coo-table": "13.3.7",
     "@danielmoncada/angular-datetime-picker": "^13.1.1",
     "@danielmoncada/angular-datetime-picker-moment-adapter": "^1.1.0",
     "@ng-bootstrap/ng-bootstrap": "^6.2.0",
