--- a/package.json
+++ b/package.json
@@ -15,10 +15,11 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "docker:build": "docker buildx build -t coodoogmbh/workhorse-ui:$npm_package_version -t coodoogmbh/workhorse-ui:latest .",
+    "docker:build": "docker build -t coodoogmbh/workhorse-ui:$npm_package_version -t coodoogmbh/workhorse-ui:latest .",
+    "docker:build-release": "docker buildx build --platform linux/amd64,linux/arm64 --push -t coodoogmbh/workhorse-ui:$npm_package_version -t coodoogmbh/workhorse-ui:latest .",
     "docker:run": "docker run -p 80:80 coodoogmbh/workhorse-ui:latest",
     "docker:push": "docker push coodoogmbh/workhorse-ui:$npm_package_version && docker push coodoogmbh/workhorse-ui:latest",
-    "docker:release": "npm run build && npm run docker:build && npm run docker:push"
+    "docker:release": "npm run build && npm run docker:build-release && npm run docker:push"
   },
   "private": true,
   "dependencies": {
